notebooks: svm-builder updates

--- a/notebooks/08-svm_builder.ipynb
+++ b/notebooks/08-svm_builder.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -111,45 +111,39 @@
       "../datasets/csvs/column_shifts_ctx_p/func.csv\n",
       "../datasets/csvs/column_shifts_ctx_p/lemma.csv\n",
       "../datasets/csvs/column_shifts_ctx_p/gpos.csv\n",
-      "../datasets/csvs/column_preddist/predicate_distance.csv\n",
       "../datasets/csvs/column_t/t.csv\n",
+      "../datasets/csvs/column_preddist/predicate_distance.csv\n",
       "../datasets/csvs/column_predmorph/pred_morph.csv\n",
+      "../datasets/csvs/column_predmarker/predicate_marker.csv\n",
       "../datasets/csvs/column_passivevoice/passive_voice.csv\n",
-      "../datasets/csvs/column_deptree/func.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Varela/anaconda/envs/tensorflow/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2698: DtypeWarning: Columns (21,22) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "../datasets/csvs/column_deptree/func.csv\n",
       "../datasets/csvs/column_deptree/lemma.csv\n",
       "../datasets/csvs/column_deptree/gpos.csv\n",
       "Index(['ID', 'S', 'P', 'P_S', 'FORM', 'LEMMA', 'GPOS', 'MORF', 'DTREE', 'FUNC',\n",
       "       ...\n",
       "       'GPOS_17', 'GPOS_18', 'GPOS_19', 'GPOS_20', 'GPOS_21', 'GPOS_CHILD_1',\n",
       "       'GPOS_CHILD_2', 'GPOS_CHILD_3', 'GPOS_GRAND_PARENT', 'GPOS_PARENT'],\n",
-      "      dtype='object', length=149)\n"
+      "      dtype='object', length=560)\n"
      ]
     }
    ],
    "source": [
-    "column_paths = ('column_shifts', 'column_shifts_ctx_p', 'column_preddist', \n",
-    "                'column_t', 'column_predmorph', 'column_passivevoice',\n",
-    "                'column_deptree')\n",
+    "column_paths = ('column_shifts', 'column_shifts_ctx_p', 'column_t', \n",
+    "                'column_preddist', 'column_predmorph', 'column_predmarker',\n",
+    "                'column_passivevoice', 'column_deptree')\n",
     "\n",
+    "numeric_columns = ('column_preddist', 'column_predmorph', \n",
+    "                   'column_predmarker', 'column_passivevoice')\n",
+    "\n",
+    "kwargs = {'sep': ',', 'encoding':'utf-8', 'index_col':0}\n",
     "for column_path in column_paths:\n",
     "    column_pattern = '{:}{:}/*'.format(DATASETS_DIR, column_path)\n",
     "    for file_path in glob.glob(column_pattern):\n",
     "        print(file_path)\n",
-    "        _df = pd.read_csv(file_path, sep=',', encoding='utf-8', index_col=0)\n",
+    "        if column_path in numeric_columns:\n",
+    "            _df = pd.read_csv(file_path, dtype=int, **kwargs)\n",
+    "        else:\n",
+    "            _df = pd.read_csv(file_path, dtype=str, **kwargs)\n",
     "        df = pd.concat((df, _df), axis=1, ignore_index=False)\n",
     "\n",
     "print(df.columns)"
@@ -159,37 +153,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Features per column"
+    "# 3. Auxiliary Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'ID': 'ID', 'S': 'S', 'P': 'P', 'P_S': 'P_S', 'FORM': 'FORM', 'LEMMA': 'LEMMA', 'GPOS': 'GPOS', 'MORF': 'MORF', 'DTREE': 'DTREE', 'FUNC': 'FUNC', 'CTREE': 'CTREE', 'PRED': 'PRED', 'ARG': 'ARG', 'FORM+1': 'FORM', 'FORM+2': 'FORM', 'FORM+3': 'FORM', 'FORM-1': 'FORM', 'FORM-2': 'FORM', 'FORM-3': 'FORM', 'FUNC+1': 'FUNC', 'FUNC+2': 'FUNC', 'FUNC+3': 'FUNC', 'FUNC-1': 'FUNC', 'FUNC-2': 'FUNC', 'FUNC-3': 'FUNC', 'LEMMA+1': 'LEMMA', 'LEMMA+2': 'LEMMA', 'LEMMA+3': 'LEMMA', 'LEMMA-1': 'LEMMA', 'LEMMA-2': 'LEMMA', 'LEMMA-3': 'LEMMA', 'GPOS+1': 'GPOS', 'GPOS+2': 'GPOS', 'GPOS+3': 'GPOS', 'GPOS-1': 'GPOS', 'GPOS-2': 'GPOS', 'GPOS-3': 'GPOS', 'FORM_CTX_P+0': 'FORM', 'FORM_CTX_P+1': 'FORM', 'FORM_CTX_P+2': 'FORM', 'FORM_CTX_P+3': 'FORM', 'FORM_CTX_P-1': 'FORM', 'FORM_CTX_P-2': 'FORM', 'FORM_CTX_P-3': 'FORM', 'FUNC_CTX_P+0': 'FUNC', 'FUNC_CTX_P+1': 'FUNC', 'FUNC_CTX_P-1': 'FUNC', 'LEMMA_CTX_P+0': 'LEMMA', 'LEMMA_CTX_P+1': 'LEMMA', 'LEMMA_CTX_P-1': 'LEMMA', 'GPOS_CTX_P+0': 'GPOS', 'GPOS_CTX_P+1': 'GPOS', 'GPOS_CTX_P-1': 'GPOS', 'PRED_DIST': 'PRED_DIST', 'T': 'T', 'PredMorph_01': 'PredMorph_', 'PredMorph_02': 'PredMorph_', 'PredMorph_03': 'PredMorph_', 'PredMorph_04': 'PredMorph_', 'PredMorph_05': 'PredMorph_', 'PredMorph_06': 'PredMorph_', 'PredMorph_07': 'PredMorph_', 'PredMorph_08': 'PredMorph_', 'PredMorph_09': 'PredMorph_', 'PredMorph_10': 'PredMorph_', 'PredMorph_11': 'PredMorph_', 'PredMorph_12': 'PredMorph_', 'PredMorph_13': 'PredMorph_', 'PredMorph_14': 'PredMorph_', 'PredMorph_15': 'PredMorph_', 'PredMorph_16': 'PredMorph_', 'PredMorph_17': 'PredMorph_', 'PredMorph_18': 'PredMorph_', 'PredMorph_19': 'PredMorph_', 'PredMorph_20': 'PredMorph_', 'PredMorph_21': 'PredMorph_', 'PredMorph_22': 'PredMorph_', 'PredMorph_23': 'PredMorph_', 'PredMorph_24': 'PredMorph_', 'PredMorph_25': 'PredMorph_', 'PredMorph_26': 'PredMorph_', 'PredMorph_27': 'PredMorph_', 'PredMorph_28': 'PredMorph_', 'PredMorph_29': 'PredMorph_', 'PredMorph_30': 'PredMorph_', 'PredMorph_31': 'PredMorph_', 'PredMorph_32': 'PredMorph_', 'PredMorph_33': 'PredMorph_', 'PredMorph_34': 'PredMorph_', 'PASSIVE_VOICE': 'PASSIVE_VOICE', 'FUNC_00': 'FUNC_', 'FUNC_01': 'FUNC_', 'FUNC_02': 'FUNC_', 'FUNC_03': 'FUNC_', 'FUNC_04': 'FUNC_', 'FUNC_05': 'FUNC_', 'FUNC_06': 'FUNC_', 'FUNC_07': 'FUNC_', 'FUNC_08': 'FUNC_', 'FUNC_09': 'FUNC_', 'FUNC_10': 'FUNC_', 'FUNC_11': 'FUNC_', 'FUNC_12': 'FUNC_', 'FUNC_13': 'FUNC_', 'FUNC_14': 'FUNC_', 'FUNC_15': 'FUNC_', 'FUNC_16': 'FUNC_', 'FUNC_17': 'FUNC_', 'FUNC_18': 'FUNC_', 'FUNC_19': 'FUNC_', 'FUNC_20': 'FUNC_', 'FUNC_21': 'FUNC_', 'FUNC_CHILD_1': 'FUNC_CHILD_', 'FUNC_CHILD_2': 'FUNC_CHILD_', 'FUNC_CHILD_3': 'FUNC_CHILD_', 'FUNC_GRAND_PARENT': 'FUNC_GRAND_PARENT', 'FUNC_PARENT': 'FUNC_PARENT', 'LEMMA_CHILD_1': 'LEMMA_CHILD_', 'LEMMA_CHILD_2': 'LEMMA_CHILD_', 'LEMMA_CHILD_3': 'LEMMA_CHILD_', 'LEMMA_GRAND_PARENT': 'LEMMA_GRAND_PARENT', 'LEMMA_PARENT': 'LEMMA_PARENT', 'GPOS_00': 'GPOS_', 'GPOS_01': 'GPOS_', 'GPOS_02': 'GPOS_', 'GPOS_03': 'GPOS_', 'GPOS_04': 'GPOS_', 'GPOS_05': 'GPOS_', 'GPOS_06': 'GPOS_', 'GPOS_07': 'GPOS_', 'GPOS_08': 'GPOS_', 'GPOS_09': 'GPOS_', 'GPOS_10': 'GPOS_', 'GPOS_11': 'GPOS_', 'GPOS_12': 'GPOS_', 'GPOS_13': 'GPOS_', 'GPOS_14': 'GPOS_', 'GPOS_15': 'GPOS_', 'GPOS_16': 'GPOS_', 'GPOS_17': 'GPOS_', 'GPOS_18': 'GPOS_', 'GPOS_19': 'GPOS_', 'GPOS_20': 'GPOS_', 'GPOS_21': 'GPOS_', 'GPOS_CHILD_1': 'GPOS_CHILD_', 'GPOS_CHILD_2': 'GPOS_CHILD_', 'GPOS_CHILD_3': 'GPOS_CHILD_', 'GPOS_GRAND_PARENT': 'GPOS_GRAND_PARENT', 'GPOS_PARENT': 'GPOS_PARENT'}\n",
-      "{'ID': 1, 'S': 1, 'P': 1, 'P_S': 1, 'FORM': 13290, 'LEMMA': 9071, 'GPOS': 25, 'MORF': 112, 'DTREE': 91, 'FUNC': 49, 'CTREE': 310, 'PRED': 1027, 'ARG': 60, 'FORM+1': 13290, 'FORM+2': 13290, 'FORM+3': 13290, 'FORM-1': 13290, 'FORM-2': 13290, 'FORM-3': 13290, 'FUNC+1': 49, 'FUNC+2': 49, 'FUNC+3': 49, 'FUNC-1': 49, 'FUNC-2': 49, 'FUNC-3': 49, 'LEMMA+1': 9071, 'LEMMA+2': 9071, 'LEMMA+3': 9071, 'LEMMA-1': 9071, 'LEMMA-2': 9071, 'LEMMA-3': 9071, 'GPOS+1': 25, 'GPOS+2': 25, 'GPOS+3': 25, 'GPOS-1': 25, 'GPOS-2': 25, 'GPOS-3': 25, 'FORM_CTX_P+0': 13290, 'FORM_CTX_P+1': 13290, 'FORM_CTX_P+2': 13290, 'FORM_CTX_P+3': 13290, 'FORM_CTX_P-1': 13290, 'FORM_CTX_P-2': 13290, 'FORM_CTX_P-3': 13290, 'FUNC_CTX_P+0': 49, 'FUNC_CTX_P+1': 49, 'FUNC_CTX_P-1': 49, 'LEMMA_CTX_P+0': 9071, 'LEMMA_CTX_P+1': 9071, 'LEMMA_CTX_P-1': 9071, 'GPOS_CTX_P+0': 25, 'GPOS_CTX_P+1': 25, 'GPOS_CTX_P-1': 25, 'PRED_DIST': 1, 'T': 36, 'PredMorph_01': 1, 'PredMorph_02': 1, 'PredMorph_03': 1, 'PredMorph_04': 1, 'PredMorph_05': 1, 'PredMorph_06': 1, 'PredMorph_07': 1, 'PredMorph_08': 1, 'PredMorph_09': 1, 'PredMorph_10': 1, 'PredMorph_11': 1, 'PredMorph_12': 1, 'PredMorph_13': 1, 'PredMorph_14': 1, 'PredMorph_15': 1, 'PredMorph_16': 1, 'PredMorph_17': 1, 'PredMorph_18': 1, 'PredMorph_19': 1, 'PredMorph_20': 1, 'PredMorph_21': 1, 'PredMorph_22': 1, 'PredMorph_23': 1, 'PredMorph_24': 1, 'PredMorph_25': 1, 'PredMorph_26': 1, 'PredMorph_27': 1, 'PredMorph_28': 1, 'PredMorph_29': 1, 'PredMorph_30': 1, 'PredMorph_31': 1, 'PredMorph_32': 1, 'PredMorph_33': 1, 'PredMorph_34': 1, 'PASSIVE_VOICE': 1, 'FUNC_00': 1, 'FUNC_01': 1, 'FUNC_02': 1, 'FUNC_03': 1, 'FUNC_04': 1, 'FUNC_05': 1, 'FUNC_06': 1, 'FUNC_07': 1, 'FUNC_08': 1, 'FUNC_09': 1, 'FUNC_10': 1, 'FUNC_11': 1, 'FUNC_12': 1, 'FUNC_13': 1, 'FUNC_14': 1, 'FUNC_15': 1, 'FUNC_16': 1, 'FUNC_17': 1, 'FUNC_18': 1, 'FUNC_19': 1, 'FUNC_20': 1, 'FUNC_21': 1, 'FUNC_CHILD_1': 1, 'FUNC_CHILD_2': 1, 'FUNC_CHILD_3': 1, 'FUNC_GRAND_PARENT': 1, 'FUNC_PARENT': 1, 'LEMMA_CHILD_1': 1, 'LEMMA_CHILD_2': 1, 'LEMMA_CHILD_3': 1, 'LEMMA_GRAND_PARENT': 1, 'LEMMA_PARENT': 1, 'GPOS_00': 1, 'GPOS_01': 1, 'GPOS_02': 1, 'GPOS_03': 1, 'GPOS_04': 1, 'GPOS_05': 1, 'GPOS_06': 1, 'GPOS_07': 1, 'GPOS_08': 1, 'GPOS_09': 1, 'GPOS_10': 1, 'GPOS_11': 1, 'GPOS_12': 1, 'GPOS_13': 1, 'GPOS_14': 1, 'GPOS_15': 1, 'GPOS_16': 1, 'GPOS_17': 1, 'GPOS_18': 1, 'GPOS_19': 1, 'GPOS_20': 1, 'GPOS_21': 1, 'GPOS_CHILD_1': 1, 'GPOS_CHILD_2': 1, 'GPOS_CHILD_3': 1, 'GPOS_GRAND_PARENT': 1, 'GPOS_PARENT': 1}\n"
-     ]
-    }
-   ],
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "\n",
-    "columns_mapper = {col: re.sub(r'[\\+|\\-|\\d|]|(_CTX_P)', '', col) for col in df.columns.tolist()}\n",
-    "print(columns_mapper)\n",
-    "dimension_mapper = {}\n",
-    "for colfeat, colbase in columns_mapper.items():\n",
-    "    if colbase in dictschema:\n",
-    "        if 'domain' in dictschema[colbase]:\n",
-    "            dimension_mapper[colfeat] = len( dictschema[colbase]['domain'])\n",
-    "        else:\n",
-    "            dimension_mapper[colfeat] = 1\n",
-    "    else:\n",
-    "        dimension_mapper[colfeat] = 1\n",
-    "          \n",
     "def bounds_fn(columns, embeddings_size, dimension_mapper, columns_mapper):\n",
     "    bmapper = {}\n",
     "    lb = 0 \n",
@@ -205,7 +179,50 @@
     "def is_dense(col, columns_mapper):\n",
     "    return columns_mapper[col] in ('FORM', 'LEMMA', 'PRED')\n",
     "\n",
-    "print(dimension_mapper)"
+    "\n",
+    "def subcol(col):\n",
+    "    re_ctxp = r'(_CTX_P)|(_\\d)|[\\+|\\-|\\d|]'\n",
+    "    re_repl = r'(_CHILD)|(_PARENT)|(_GRAND_PARENT)'\n",
+    "\n",
+    "    bcol = re.sub(re_ctxp, '', col)\n",
+    "    bcol = re.sub(re_repl, '', bcol)\n",
+    "    return bcol"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Column Schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ID': 'ID', 'S': 'S', 'P': 'P', 'P_S': 'P_S', 'FORM': 'FORM', 'LEMMA': 'LEMMA', 'GPOS': 'GPOS', 'MORF': 'MORF', 'DTREE': 'DTREE', 'FUNC': 'FUNC', 'CTREE': 'CTREE', 'PRED': 'PRED', 'ARG': 'ARG', 'FORM+1': 'FORM', 'FORM+2': 'FORM', 'FORM+3': 'FORM', 'FORM-1': 'FORM', 'FORM-2': 'FORM', 'FORM-3': 'FORM', 'FUNC+1': 'FUNC', 'FUNC+2': 'FUNC', 'FUNC+3': 'FUNC', 'FUNC-1': 'FUNC', 'FUNC-2': 'FUNC', 'FUNC-3': 'FUNC', 'LEMMA+1': 'LEMMA', 'LEMMA+2': 'LEMMA', 'LEMMA+3': 'LEMMA', 'LEMMA-1': 'LEMMA', 'LEMMA-2': 'LEMMA', 'LEMMA-3': 'LEMMA', 'GPOS+1': 'GPOS', 'GPOS+2': 'GPOS', 'GPOS+3': 'GPOS', 'GPOS-1': 'GPOS', 'GPOS-2': 'GPOS', 'GPOS-3': 'GPOS', 'FORM_CTX_P+0': 'FORM', 'FORM_CTX_P+1': 'FORM', 'FORM_CTX_P+2': 'FORM', 'FORM_CTX_P+3': 'FORM', 'FORM_CTX_P-1': 'FORM', 'FORM_CTX_P-2': 'FORM', 'FORM_CTX_P-3': 'FORM', 'FUNC_CTX_P+0': 'FUNC', 'FUNC_CTX_P+1': 'FUNC', 'FUNC_CTX_P-1': 'FUNC', 'LEMMA_CTX_P+0': 'LEMMA', 'LEMMA_CTX_P+1': 'LEMMA', 'LEMMA_CTX_P-1': 'LEMMA', 'GPOS_CTX_P+0': 'GPOS', 'GPOS_CTX_P+1': 'GPOS', 'GPOS_CTX_P-1': 'GPOS', 'PRED_DIST': 'PRED_DIST', 'T': 'T', 'PredMorph_01': 'PredMorph', 'PredMorph_02': 'PredMorph', 'PredMorph_03': 'PredMorph', 'PredMorph_04': 'PredMorph', 'PredMorph_05': 'PredMorph', 'PredMorph_06': 'PredMorph', 'PredMorph_07': 'PredMorph', 'PredMorph_08': 'PredMorph', 'PredMorph_09': 'PredMorph', 'PredMorph_10': 'PredMorph', 'PredMorph_11': 'PredMorph', 'PredMorph_12': 'PredMorph', 'PredMorph_13': 'PredMorph', 'PredMorph_14': 'PredMorph', 'PredMorph_15': 'PredMorph', 'PredMorph_16': 'PredMorph', 'PredMorph_17': 'PredMorph', 'PredMorph_18': 'PredMorph', 'PredMorph_19': 'PredMorph', 'PredMorph_20': 'PredMorph', 'PredMorph_21': 'PredMorph', 'PredMorph_22': 'PredMorph', 'PredMorph_23': 'PredMorph', 'PredMorph_24': 'PredMorph', 'PredMorph_25': 'PredMorph', 'PredMorph_26': 'PredMorph', 'PredMorph_27': 'PredMorph', 'PredMorph_28': 'PredMorph', 'PredMorph_29': 'PredMorph', 'PredMorph_30': 'PredMorph', 'PredMorph_31': 'PredMorph', 'PredMorph_32': 'PredMorph', 'PredMorph_33': 'PredMorph', 'PredMorph_34': 'PredMorph', 'PASSIVE_VOICE': 'PASSIVE_VOICE', 'FUNC_00': 'FUNC', 'FUNC_01': 'FUNC', 'FUNC_02': 'FUNC', 'FUNC_03': 'FUNC', 'FUNC_04': 'FUNC', 'FUNC_05': 'FUNC', 'FUNC_06': 'FUNC', 'FUNC_07': 'FUNC', 'FUNC_08': 'FUNC', 'FUNC_09': 'FUNC', 'FUNC_10': 'FUNC', 'FUNC_11': 'FUNC', 'FUNC_12': 'FUNC', 'FUNC_13': 'FUNC', 'FUNC_14': 'FUNC', 'FUNC_15': 'FUNC', 'FUNC_16': 'FUNC', 'FUNC_17': 'FUNC', 'FUNC_18': 'FUNC', 'FUNC_19': 'FUNC', 'FUNC_20': 'FUNC', 'FUNC_21': 'FUNC', 'FUNC_CHILD_1': 'FUNC', 'FUNC_CHILD_2': 'FUNC', 'FUNC_CHILD_3': 'FUNC', 'FUNC_GRAND_PARENT': 'FUNC', 'FUNC_PARENT': 'FUNC', 'LEMMA_CHILD_1': 'LEMMA', 'LEMMA_CHILD_2': 'LEMMA', 'LEMMA_CHILD_3': 'LEMMA', 'LEMMA_GRAND_PARENT': 'LEMMA', 'LEMMA_PARENT': 'LEMMA', 'GPOS_00': 'GPOS', 'GPOS_01': 'GPOS', 'GPOS_02': 'GPOS', 'GPOS_03': 'GPOS', 'GPOS_04': 'GPOS', 'GPOS_05': 'GPOS', 'GPOS_06': 'GPOS', 'GPOS_07': 'GPOS', 'GPOS_08': 'GPOS', 'GPOS_09': 'GPOS', 'GPOS_10': 'GPOS', 'GPOS_11': 'GPOS', 'GPOS_12': 'GPOS', 'GPOS_13': 'GPOS', 'GPOS_14': 'GPOS', 'GPOS_15': 'GPOS', 'GPOS_16': 'GPOS', 'GPOS_17': 'GPOS', 'GPOS_18': 'GPOS', 'GPOS_19': 'GPOS', 'GPOS_20': 'GPOS', 'GPOS_21': 'GPOS', 'GPOS_CHILD_1': 'GPOS', 'GPOS_CHILD_2': 'GPOS', 'GPOS_CHILD_3': 'GPOS', 'GPOS_GRAND_PARENT': 'GPOS', 'GPOS_PARENT': 'GPOS', 'PRED_MARKER': 'PRED_MARKER'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "columns_mapper = {col: subcol(col) for col in df.columns.tolist()}\n",
+    "print(columns_mapper)\n",
+    "dimension_mapper = {}\n",
+    "for colfeat, colbase in columns_mapper.items():\n",
+    "    if colbase in dictschema:\n",
+    "        if 'domain' in dictschema[colbase]:\n",
+    "            dimension_mapper[colfeat] = len( dictschema[colbase]['domain'])\n",
+    "        else:\n",
+    "            dimension_mapper[colfeat] = 1\n",
+    "    else:\n",
+    "        dimension_mapper[colfeat] = 1\n",
+    "          "
    ]
   },
   {
@@ -232,11 +249,11 @@
     "             for col in dictschema if  col in dictschema and 'domain' in dictschema[col]}\n",
     "\n",
     "\n",
-    "columns = ['FORM', 'LEMMA', 'GPOS', 'MORF', 'DTREE', 'FUNC', 'CTREE', 'PRED',\n",
-    "          'FORM-3', 'FORM-2', 'FORM-1', 'FORM+1', 'FORM+2', 'FORM+3',\n",
+    "columns = ['FORM', 'FUNC', 'GPOS', 'LEMMA', 'PRED'\n",
+    "          'FORM-1', 'FORM+1', 'FUNC-1', 'FUNC+1',\n",
     "          'LEMMA-3', 'LEMMA-2', 'LEMMA-1', 'LEMMA+1', 'LEMMA+2', 'LEMMA+3',\n",
     "          'GPOS-3', 'GPOS-2', 'GPOS-1', 'GPOS+1', 'GPOS+2', 'GPOS+3',\n",
-    "          'FUNC-3', 'FUNC-2', 'FUNC-1', 'FUNC+1', 'FUNC+2', 'FUNC+3',\n",
+    "          'FUNC-3', 'FUNC-2',  'FUNC+2', 'FUNC+3',\n",
     "          'GPOS_CTX_P-1', 'GPOS_CTX_P+0', 'GPOS_CTX_P+1',\n",
     "          'LEMMA_CTX_P-1', 'LEMMA_CTX_P+0', 'LEMMA_CTX_P+1', 'PRED_DIST']\n",
     "\n",
