gs.csv: fixed proposition 3651, 3652 & (C-V*) handled

--- a/notebooks/08-svm_builder.ipynb
+++ b/notebooks/08-svm_builder.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -109,6 +109,8 @@
       "../datasets/csvs/column_shifts/gpos.csv\n",
       "../datasets/csvs/column_shifts_ctx_p/form.csv\n",
       "../datasets/csvs/column_shifts_ctx_p/func.csv\n",
+      "../datasets/csvs/column_shifts_ctx_p/pred.csv\n",
+      "../datasets/csvs/column_shifts_ctx_p/pred_bkp.csv\n",
       "../datasets/csvs/column_shifts_ctx_p/lemma.csv\n",
       "../datasets/csvs/column_shifts_ctx_p/gpos.csv\n",
       "../datasets/csvs/column_t/t.csv\n",
@@ -123,7 +125,7 @@
       "       ...\n",
       "       'GPOS_17', 'GPOS_18', 'GPOS_19', 'GPOS_20', 'GPOS_21', 'GPOS_CHILD_1',\n",
       "       'GPOS_CHILD_2', 'GPOS_CHILD_3', 'GPOS_GRAND_PARENT', 'GPOS_PARENT'],\n",
-      "      dtype='object', length=560)\n"
+      "      dtype='object', length=164)\n"
      ]
     }
    ],
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -198,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ID': 'ID', 'S': 'S', 'P': 'P', 'P_S': 'P_S', 'FORM': 'FORM', 'LEMMA': 'LEMMA', 'GPOS': 'GPOS', 'MORF': 'MORF', 'DTREE': 'DTREE', 'FUNC': 'FUNC', 'CTREE': 'CTREE', 'PRED': 'PRED', 'ARG': 'ARG', 'FORM+1': 'FORM', 'FORM+2': 'FORM', 'FORM+3': 'FORM', 'FORM-1': 'FORM', 'FORM-2': 'FORM', 'FORM-3': 'FORM', 'FUNC+1': 'FUNC', 'FUNC+2': 'FUNC', 'FUNC+3': 'FUNC', 'FUNC-1': 'FUNC', 'FUNC-2': 'FUNC', 'FUNC-3': 'FUNC', 'LEMMA+1': 'LEMMA', 'LEMMA+2': 'LEMMA', 'LEMMA+3': 'LEMMA', 'LEMMA-1': 'LEMMA', 'LEMMA-2': 'LEMMA', 'LEMMA-3': 'LEMMA', 'GPOS+1': 'GPOS', 'GPOS+2': 'GPOS', 'GPOS+3': 'GPOS', 'GPOS-1': 'GPOS', 'GPOS-2': 'GPOS', 'GPOS-3': 'GPOS', 'FORM_CTX_P+0': 'FORM', 'FORM_CTX_P+1': 'FORM', 'FORM_CTX_P+2': 'FORM', 'FORM_CTX_P+3': 'FORM', 'FORM_CTX_P-1': 'FORM', 'FORM_CTX_P-2': 'FORM', 'FORM_CTX_P-3': 'FORM', 'FUNC_CTX_P+0': 'FUNC', 'FUNC_CTX_P+1': 'FUNC', 'FUNC_CTX_P-1': 'FUNC', 'LEMMA_CTX_P+0': 'LEMMA', 'LEMMA_CTX_P+1': 'LEMMA', 'LEMMA_CTX_P-1': 'LEMMA', 'GPOS_CTX_P+0': 'GPOS', 'GPOS_CTX_P+1': 'GPOS', 'GPOS_CTX_P-1': 'GPOS', 'PRED_DIST': 'PRED_DIST', 'T': 'T', 'PredMorph_01': 'PredMorph', 'PredMorph_02': 'PredMorph', 'PredMorph_03': 'PredMorph', 'PredMorph_04': 'PredMorph', 'PredMorph_05': 'PredMorph', 'PredMorph_06': 'PredMorph', 'PredMorph_07': 'PredMorph', 'PredMorph_08': 'PredMorph', 'PredMorph_09': 'PredMorph', 'PredMorph_10': 'PredMorph', 'PredMorph_11': 'PredMorph', 'PredMorph_12': 'PredMorph', 'PredMorph_13': 'PredMorph', 'PredMorph_14': 'PredMorph', 'PredMorph_15': 'PredMorph', 'PredMorph_16': 'PredMorph', 'PredMorph_17': 'PredMorph', 'PredMorph_18': 'PredMorph', 'PredMorph_19': 'PredMorph', 'PredMorph_20': 'PredMorph', 'PredMorph_21': 'PredMorph', 'PredMorph_22': 'PredMorph', 'PredMorph_23': 'PredMorph', 'PredMorph_24': 'PredMorph', 'PredMorph_25': 'PredMorph', 'PredMorph_26': 'PredMorph', 'PredMorph_27': 'PredMorph', 'PredMorph_28': 'PredMorph', 'PredMorph_29': 'PredMorph', 'PredMorph_30': 'PredMorph', 'PredMorph_31': 'PredMorph', 'PredMorph_32': 'PredMorph', 'PredMorph_33': 'PredMorph', 'PredMorph_34': 'PredMorph', 'PASSIVE_VOICE': 'PASSIVE_VOICE', 'FUNC_00': 'FUNC', 'FUNC_01': 'FUNC', 'FUNC_02': 'FUNC', 'FUNC_03': 'FUNC', 'FUNC_04': 'FUNC', 'FUNC_05': 'FUNC', 'FUNC_06': 'FUNC', 'FUNC_07': 'FUNC', 'FUNC_08': 'FUNC', 'FUNC_09': 'FUNC', 'FUNC_10': 'FUNC', 'FUNC_11': 'FUNC', 'FUNC_12': 'FUNC', 'FUNC_13': 'FUNC', 'FUNC_14': 'FUNC', 'FUNC_15': 'FUNC', 'FUNC_16': 'FUNC', 'FUNC_17': 'FUNC', 'FUNC_18': 'FUNC', 'FUNC_19': 'FUNC', 'FUNC_20': 'FUNC', 'FUNC_21': 'FUNC', 'FUNC_CHILD_1': 'FUNC', 'FUNC_CHILD_2': 'FUNC', 'FUNC_CHILD_3': 'FUNC', 'FUNC_GRAND_PARENT': 'FUNC', 'FUNC_PARENT': 'FUNC', 'LEMMA_CHILD_1': 'LEMMA', 'LEMMA_CHILD_2': 'LEMMA', 'LEMMA_CHILD_3': 'LEMMA', 'LEMMA_GRAND_PARENT': 'LEMMA', 'LEMMA_PARENT': 'LEMMA', 'GPOS_00': 'GPOS', 'GPOS_01': 'GPOS', 'GPOS_02': 'GPOS', 'GPOS_03': 'GPOS', 'GPOS_04': 'GPOS', 'GPOS_05': 'GPOS', 'GPOS_06': 'GPOS', 'GPOS_07': 'GPOS', 'GPOS_08': 'GPOS', 'GPOS_09': 'GPOS', 'GPOS_10': 'GPOS', 'GPOS_11': 'GPOS', 'GPOS_12': 'GPOS', 'GPOS_13': 'GPOS', 'GPOS_14': 'GPOS', 'GPOS_15': 'GPOS', 'GPOS_16': 'GPOS', 'GPOS_17': 'GPOS', 'GPOS_18': 'GPOS', 'GPOS_19': 'GPOS', 'GPOS_20': 'GPOS', 'GPOS_21': 'GPOS', 'GPOS_CHILD_1': 'GPOS', 'GPOS_CHILD_2': 'GPOS', 'GPOS_CHILD_3': 'GPOS', 'GPOS_GRAND_PARENT': 'GPOS', 'GPOS_PARENT': 'GPOS', 'PRED_MARKER': 'PRED_MARKER'}\n"
+      "{'ID': 'ID', 'S': 'S', 'P': 'P', 'P_S': 'P_S', 'FORM': 'FORM', 'LEMMA': 'LEMMA', 'GPOS': 'GPOS', 'MORF': 'MORF', 'DTREE': 'DTREE', 'FUNC': 'FUNC', 'CTREE': 'CTREE', 'PRED': 'PRED', 'ARG': 'ARG', 'FORM+1': 'FORM', 'FORM+2': 'FORM', 'FORM+3': 'FORM', 'FORM-1': 'FORM', 'FORM-2': 'FORM', 'FORM-3': 'FORM', 'FUNC+1': 'FUNC', 'FUNC+2': 'FUNC', 'FUNC+3': 'FUNC', 'FUNC-1': 'FUNC', 'FUNC-2': 'FUNC', 'FUNC-3': 'FUNC', 'LEMMA+1': 'LEMMA', 'LEMMA+2': 'LEMMA', 'LEMMA+3': 'LEMMA', 'LEMMA-1': 'LEMMA', 'LEMMA-2': 'LEMMA', 'LEMMA-3': 'LEMMA', 'GPOS+1': 'GPOS', 'GPOS+2': 'GPOS', 'GPOS+3': 'GPOS', 'GPOS-1': 'GPOS', 'GPOS-2': 'GPOS', 'GPOS-3': 'GPOS', 'FORM_CTX_P+0': 'FORM', 'FORM_CTX_P+1': 'FORM', 'FORM_CTX_P+2': 'FORM', 'FORM_CTX_P+3': 'FORM', 'FORM_CTX_P-1': 'FORM', 'FORM_CTX_P-2': 'FORM', 'FORM_CTX_P-3': 'FORM', 'FUNC_CTX_P+0': 'FUNC', 'FUNC_CTX_P+1': 'FUNC', 'FUNC_CTX_P+2': 'FUNC', 'FUNC_CTX_P+3': 'FUNC', 'FUNC_CTX_P-1': 'FUNC', 'FUNC_CTX_P-2': 'FUNC', 'FUNC_CTX_P-3': 'FUNC', 'PRED_CTX_P+0': 'PRED', 'LEMMA_CTX_P+0': 'LEMMA', 'LEMMA_CTX_P+1': 'LEMMA', 'LEMMA_CTX_P+2': 'LEMMA', 'LEMMA_CTX_P+3': 'LEMMA', 'LEMMA_CTX_P-1': 'LEMMA', 'LEMMA_CTX_P-2': 'LEMMA', 'LEMMA_CTX_P-3': 'LEMMA', 'GPOS_CTX_P+0': 'GPOS', 'GPOS_CTX_P+1': 'GPOS', 'GPOS_CTX_P+2': 'GPOS', 'GPOS_CTX_P+3': 'GPOS', 'GPOS_CTX_P-1': 'GPOS', 'GPOS_CTX_P-2': 'GPOS', 'GPOS_CTX_P-3': 'GPOS', 'T': 'T', 'PRED_DIST': 'PRED_DIST', 'PredMorph_01': 'PredMorph', 'PredMorph_02': 'PredMorph', 'PredMorph_03': 'PredMorph', 'PredMorph_04': 'PredMorph', 'PredMorph_05': 'PredMorph', 'PredMorph_06': 'PredMorph', 'PredMorph_07': 'PredMorph', 'PredMorph_08': 'PredMorph', 'PredMorph_09': 'PredMorph', 'PredMorph_10': 'PredMorph', 'PredMorph_11': 'PredMorph', 'PredMorph_12': 'PredMorph', 'PredMorph_13': 'PredMorph', 'PredMorph_14': 'PredMorph', 'PredMorph_15': 'PredMorph', 'PredMorph_16': 'PredMorph', 'PredMorph_17': 'PredMorph', 'PredMorph_18': 'PredMorph', 'PredMorph_19': 'PredMorph', 'PredMorph_20': 'PredMorph', 'PredMorph_21': 'PredMorph', 'PredMorph_22': 'PredMorph', 'PredMorph_23': 'PredMorph', 'PredMorph_24': 'PredMorph', 'PredMorph_25': 'PredMorph', 'PredMorph_26': 'PredMorph', 'PredMorph_27': 'PredMorph', 'PredMorph_28': 'PredMorph', 'PredMorph_29': 'PredMorph', 'PredMorph_30': 'PredMorph', 'PredMorph_31': 'PredMorph', 'PredMorph_32': 'PredMorph', 'PredMorph_33': 'PredMorph', 'PredMorph_34': 'PredMorph', 'PRED_MARKER': 'PRED_MARKER', 'PASSIVE_VOICE': 'PASSIVE_VOICE', 'FUNC_00': 'FUNC', 'FUNC_01': 'FUNC', 'FUNC_02': 'FUNC', 'FUNC_03': 'FUNC', 'FUNC_04': 'FUNC', 'FUNC_05': 'FUNC', 'FUNC_06': 'FUNC', 'FUNC_07': 'FUNC', 'FUNC_08': 'FUNC', 'FUNC_09': 'FUNC', 'FUNC_10': 'FUNC', 'FUNC_11': 'FUNC', 'FUNC_12': 'FUNC', 'FUNC_13': 'FUNC', 'FUNC_14': 'FUNC', 'FUNC_15': 'FUNC', 'FUNC_16': 'FUNC', 'FUNC_17': 'FUNC', 'FUNC_18': 'FUNC', 'FUNC_19': 'FUNC', 'FUNC_20': 'FUNC', 'FUNC_21': 'FUNC', 'FUNC_CHILD_1': 'FUNC', 'FUNC_CHILD_2': 'FUNC', 'FUNC_CHILD_3': 'FUNC', 'FUNC_GRAND_PARENT': 'FUNC', 'FUNC_PARENT': 'FUNC', 'LEMMA_CHILD_1': 'LEMMA', 'LEMMA_CHILD_2': 'LEMMA', 'LEMMA_CHILD_3': 'LEMMA', 'LEMMA_GRAND_PARENT': 'LEMMA', 'LEMMA_PARENT': 'LEMMA', 'GPOS_00': 'GPOS', 'GPOS_01': 'GPOS', 'GPOS_02': 'GPOS', 'GPOS_03': 'GPOS', 'GPOS_04': 'GPOS', 'GPOS_05': 'GPOS', 'GPOS_06': 'GPOS', 'GPOS_07': 'GPOS', 'GPOS_08': 'GPOS', 'GPOS_09': 'GPOS', 'GPOS_10': 'GPOS', 'GPOS_11': 'GPOS', 'GPOS_12': 'GPOS', 'GPOS_13': 'GPOS', 'GPOS_14': 'GPOS', 'GPOS_15': 'GPOS', 'GPOS_16': 'GPOS', 'GPOS_17': 'GPOS', 'GPOS_18': 'GPOS', 'GPOS_19': 'GPOS', 'GPOS_20': 'GPOS', 'GPOS_21': 'GPOS', 'GPOS_CHILD_1': 'GPOS', 'GPOS_CHILD_2': 'GPOS', 'GPOS_CHILD_3': 'GPOS', 'GPOS_GRAND_PARENT': 'GPOS', 'GPOS_PARENT': 'GPOS'}\n"
      ]
     }
    ],
@@ -249,13 +251,19 @@
     "             for col in dictschema if  col in dictschema and 'domain' in dictschema[col]}\n",
     "\n",
     "\n",
-    "columns = ['FORM', 'FUNC', 'GPOS', 'LEMMA', 'PRED'\n",
-    "          'FORM-1', 'FORM+1', 'FUNC-1', 'FUNC+1',\n",
+    "columns_gs  = ['FORM', 'FUNC', 'GPOS', 'LEMMA', 'PRED']\n",
+    "columns_win = [ 'FORM-1', 'FORM+1', 'FUNC-1', 'FUNC+1',\n",
     "          'LEMMA-3', 'LEMMA-2', 'LEMMA-1', 'LEMMA+1', 'LEMMA+2', 'LEMMA+3',\n",
-    "          'GPOS-3', 'GPOS-2', 'GPOS-1', 'GPOS+1', 'GPOS+2', 'GPOS+3',\n",
-    "          'FUNC-3', 'FUNC-2',  'FUNC+2', 'FUNC+3',\n",
-    "          'GPOS_CTX_P-1', 'GPOS_CTX_P+0', 'GPOS_CTX_P+1',\n",
-    "          'LEMMA_CTX_P-1', 'LEMMA_CTX_P+0', 'LEMMA_CTX_P+1', 'PRED_DIST']\n",
+    "          'GPOS-3', 'GPOS-2', 'GPOS-1', 'GPOS+1', 'GPOS+2', 'GPOS+3']\n",
+    "\n",
+    "columns_ctxp = ['PRED_CTX_P+0', 'GPOS_CTX_P-1', 'GPOS_CTX_P+0', 'GPOS_CTX_P+1',\n",
+    "          'FUNC_CTX_P-1', 'FUNC_CTX_P+0', 'FUNC_CTX_P+1']\n",
+    "\n",
+    "\n",
+    "columns_morph = ['PredMorph_{:}'.format(i + 1) for i in range(34)]\n",
+    "columns_pred = ['PRED_DIST', 'PASSIVE_VOICE']\n",
+    "\n",
+    "columns_dtree = []\n",
     "\n",
     "\n",
     "d = df.to_dict()\n",
